--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "hubot": "^2.19.0",
+    "hubot-pugme": "^0.1.0",
     "hubot-rules": "^0.1.1",
     "jquery": "^3.1.0"
   }
