--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "electron-prebuilt": "^1.2.0"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "coffee-script": "^1.10.0",
     "hubot": "^2.19.0",
     "hubot-pugme": "^0.1.0",
     "hubot-rules": "^0.1.1",
