--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "electron ."
   },
   "devDependencies": {
+    "electron-packager": "^7.6.0",
     "electron-prebuilt": "^1.2.0"
   },
   "dependencies": {
